--- a/for blog function pratice/Kotlin/Dialog/CustomDialog/app/src/main/res/layout/activity_main.xml
+++ b/for blog function pratice/Kotlin/Dialog/CustomDialog/app/src/main/res/layout/activity_main.xml
@@ -10,23 +10,21 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="Custom Dialog"
-        android:textSize="24sp"
+        android:layout_marginTop="60dp"
+        android:text="CustomDialog"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_dialog"
-        android:layout_width="160dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/custom_button_ripple"
+        android:layout_marginTop="70dp"
+        android:background="@drawable/main_dialog_call_button"
         android:text="다이얼로그 열기"
-        android:textSize="18sp"
-        android:layout_marginTop="140dp"
-        app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
