--- a/for blog function pratice/Kotlin/Dialog/CustomDialog/app/src/main/res/layout/custom_dialog.xml
+++ b/for blog function pratice/Kotlin/Dialog/CustomDialog/app/src/main/res/layout/custom_dialog.xml
@@ -2,39 +2,116 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="250dp"
+    android:layout_height="250dp"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:id="@+id/cons_title"
+        android:layout_width="247dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="3dp"
+        android:background="@drawable/dialog_title_shape"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="OK"
-            android:textColor="#FA0000"
-            android:textSize="18sp"
-            android:layout_marginTop="200dp"
-            android:layout_marginBottom="30dp"
-            android:layout_marginStart="200dp"
-            android:layout_marginEnd="30dp"
+            android:text="알림"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.615" />
+
+        <ImageButton
+            android:id="@+id/ib_close"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="200dp"
+            android:layout_marginEnd="15dp"
+            android:background="?attr/selectableItemBackground"
+            android:clickable="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_close" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="50dp"
+            android:layout_height="0dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/tv_title"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/maple" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="#BABABA"
+        app:layout_constraintBottom_toTopOf="@+id/cosn_message"
+        app:layout_constraintEnd_toEndOf="@+id/cons_title"
+        app:layout_constraintStart_toStartOf="@+id/cons_title" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cosn_message"
+        android:layout_width="250dp"
+        android:layout_height="0dp"
+        android:background="@drawable/dialog_shape"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/cons_title"
+        app:layout_constraintTop_toBottomOf="@+id/cons_title">
+
+        <TextView
+            android:id="@+id/tv_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
+            android:text="종료하시겠습니까?"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cancel"
-            android:textSize="18sp"
-            android:layout_marginEnd="20dp"
-            app:layout_constraintBottom_toBottomOf="@+id/textView3"
-            app:layout_constraintEnd_toStartOf="@+id/textView3" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/tv_ok"
+        android:layout_width="70dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="180dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/custom_dialog_button_shape"
+        android:gravity="center"
+        android:text="OK"
+        android:textColor="#F63B2D"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_cancel"
+        android:layout_width="70dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/custom_dialog_button_shape"
+        android:gravity="center"
+        android:text="Cancel"
+        android:textColor="#838383"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_ok"
+        app:layout_constraintEnd_toStartOf="@+id/tv_ok"
+        app:layout_constraintTop_toTopOf="@+id/tv_ok" />
 </androidx.constraintlayout.widget.ConstraintLayout>
