--- a/for blog function pratice/Kotlin/Design/FontApply/app/src/main/res/layout/activity_main.xml
+++ b/for blog function pratice/Kotlin/Design/FontApply/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,36 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Kotlin 폰트변경"
+        android:textSize="24sp"
+        android:layout_marginTop="50dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_maple_bold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="MapleStory Bold체"
+        android:textSize="18sp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <TextView
+        android:id="@+id/tv_maple_light"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="MapleStory Light체"
+        android:textSize="18sp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_maple_bold" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
