--- a/for blog function pratice/Kotlin/System/ImmKeyboard/app/src/main/res/layout/activity_main.xml
+++ b/for blog function pratice/Kotlin/System/ImmKeyboard/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="IMM Keyboard Open/Close"
+        android:text="Keyboard Open/Close"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -25,7 +25,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="50dp"
         android:background="@drawable/custom_button"
-        android:text="IMM 키보드 열기"
+        android:text="키보드 열기"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edt_input"
         tools:ignore="HardcodedText" />
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:background="@drawable/custom_button"
-        android:text="IMM 키보드 닫기"
+        android:text="키보드 닫기"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btn_open"
         tools:ignore="HardcodedText" />
