CameraX 비디오 기능 포스팅중

--- a/for blog function pratice/Kotlin/Camera/CameraRelated/app/src/main/res/layout/activity_video_recording.xml
+++ b/for blog function pratice/Kotlin/Camera/CameraRelated/app/src/main/res/layout/activity_video_recording.xml
@@ -7,7 +7,7 @@
     tools:context=".activity.VideoRecordingActivity">
 
     <androidx.camera.view.PreviewView
-        android:id="@+id/preview_viedo"
+        android:id="@+id/preview_video"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/btn_record"
