--- a/for blog function pratice/Kotlin/KaKao/KaKaoMap/app/src/main/res/layout/activity_main.xml
+++ b/for blog function pratice/Kotlin/KaKao/KaKaoMap/app/src/main/res/layout/activity_main.xml
@@ -6,21 +6,23 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.kakaomap.vm.MapViewModel" />
+            type="com.example.kakaomapkotlin.vm.MapViewModel" />
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/map_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
