--- a/for blog function pratice/Kotlin/Intent/ActivityResult/app/src/main/res/layout/activity_sub.xml
+++ b/for blog function pratice/Kotlin/Intent/ActivityResult/app/src/main/res/layout/activity_sub.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.activityresult.vm.SubViewModel" />
+    </data>
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.SubActivity">
+    tools:context=".SubActivity">
 
     <EditText
         android:id="@+id/edt_input"
@@ -13,7 +22,8 @@
         android:layout_marginTop="100dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="단어입력"
+        android:text="@={viewModel.word}"
+        android:hint="데이터 입력"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,7 +34,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="결과값 전달"
+        android:onClick="@{(v) -> viewModel.sendData(v)}"
         app:layout_constraintEnd_toEndOf="@+id/edt_input"
         app:layout_constraintStart_toStartOf="@+id/edt_input"
         app:layout_constraintTop_toBottomOf="@+id/edt_input" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
