--- a/for blog function pratice/Kotlin/Design/FloatingButton/app/src/main/res/layout/activity_main.xml
+++ b/for blog function pratice/Kotlin/Design/FloatingButton/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:clickable="true"
-        android:onClick="@{(v) -> viewModel.clickFab(v)}"
+        android:onClick="@{() -> viewModel.clickFab(fab)}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:backgroundTint="#ACF6FF"
@@ -55,12 +55,8 @@
         android:clickable="true"
         android:visibility="invisible"
         app:backgroundTint="#41A9FB"
-        android:onAnimationStart="@{() -> viewModel.fapJazzAnimation.observe(lifecycleOwner, { anim ->
-        if (anim != null) {
-            fab.startAnimation(anim)
-        }
-        })}"
-        android:onClick="@{(v) -> viewModel.clickFabJazz(v)}"
+        android:onClick="@{() -> viewModel.clickFabJazz(fab)}"
+        android:onAnimationStart="@{viewModel.fabJazzAnimation}"
         app:layout_constraintBottom_toTopOf="@+id/fab"
         app:layout_constraintEnd_toEndOf="@+id/fab"
         app:srcCompat="@drawable/uma_jazz" />
@@ -73,7 +69,6 @@
         android:visibility="invisible"
         android:clickable="true"
         app:backgroundTint="#41A9FB"
-        android:onAnimationStart="@{viewModel.fabDiyapAnimation}"
         android:onClick="@{(v) -> viewModel.clickFabDiyap(v)"
         app:layout_constraintBottom_toTopOf="@+id/fab_jazz"
         app:layout_constraintEnd_toEndOf="@+id/fab_jazz"
