--- a/for blog function pratice/Kotlin/Design/FloatingButton/app/src/main/res/layout/activity_main.xml
+++ b/for blog function pratice/Kotlin/Design/FloatingButton/app/src/main/res/layout/activity_main.xml
@@ -56,10 +56,11 @@
         android:visibility="invisible"
         app:backgroundTint="#41A9FB"
         android:onClick="@{() -> viewModel.clickFabJazz(fab)}"
-        android:onAnimationStart="@{viewModel.fabJazzAnimation}"
         app:layout_constraintBottom_toTopOf="@+id/fab"
         app:layout_constraintEnd_toEndOf="@+id/fab"
-        app:srcCompat="@drawable/uma_jazz" />
+        app:srcCompat="@drawable/uma_jazz"
+        app:animationStart="@{viewModel.fabJazzAnimation}"
+        />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_diyap"
