--- a/for blog function pratice/Kotlin/Design/FloatingButton/app/src/main/res/layout/activity_main.xml
+++ b/for blog function pratice/Kotlin/Design/FloatingButton/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,9 @@
         android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:imageSet="@{viewModel.image}"
+        />
 
     <TextView
         android:id="@+id/textView"
