--- a/for blog function pratice/Kotlin/etc/ExoPlayer/app/src/main/res/layout-land/activity_main.xml
+++ b/for blog function pratice/Kotlin/etc/ExoPlayer/app/src/main/res/layout-land/activity_main.xml
@@ -9,7 +9,7 @@
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/exoplayer"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
